# string-escape-simd

./: .gitignore  .yarnrc.yml  BENCHMARKING.md  CHANGELOG.md  Cargo.toml  README.md  V8_OPTIMIZATIONS.md  benchmark.sh  download-fixtures.js  package.json  rust-toolchain.toml
.github/: renovate.json
.github/workflows/: CI.yml  benchmark.yml  release-crates.yml
benches/: escape.rs
cpu-features/: Cargo.toml
cpu-features/src/: main.rs
examples/: escape.rs  v8_demo.rs
src/: aarch64.rs  avx2.rs  generic.rs  lib.rs  nightly.rs  x86.rs  x86_64.rs
