[workspace]
members = ["cpu-features"]

[package]
name = "json-escape-simd"
version = "1.0.0"
edition = "2024"
rust-version = "1.89.0"
include = ["src/**/*.rs"]

[[example]]
name = "escape"
path = "examples/escape.rs"

[features]
force_aarch64_generic = [] # Force use of generic implementation on aarch64

[[bench]]
name = "escape"
harness = false

[dependencies]
anyhow = "1"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
glob = "0.3"
serde_json = "1"
v_jsonescape = "0.7"
json-escape = "0.1.1"

[profile.bench]
lto = true
codegen-units = 1

[profile.instruments]
inherits = "release"
lto = false
debug = true
