[workspace]
members = ["cpu-features"]

[package]
name = "json-escape-simd"
version = "1.1.0"
edition = "2024"
rust-version = "1.89.0"
include = ["src/**/*.rs"]
description = "Optimized SIMD routines for escaping JSON strings."
license = "MIT"
homepage = "https://github.com/napi-rs/json-escape-simd"
repository = "https://github.com/napi-rs/json-escape-simd"

[[example]]
name = "escape"
path = "examples/escape.rs"

[features]
force_aarch64_neon = [] # Force use of neon implementation on aarch64
codspeed = []

[[bench]]
name = "escape"
harness = false

[dependencies]
anyhow = "1"

[dev-dependencies]
criterion = { version = "4.0.0", package = "codspeed-criterion-compat" }
glob = "0.3"
serde_json = "1"
v_jsonescape = "0.7"
json-escape = "0.3.0"

[profile.bench]
lto = true
codegen-units = 1

[profile.instruments]
inherits = "release"
lto = false
debug = true
